# fc-report-tool-biocad

./: .gitignore  FACS.yaml  README.md  config.yaml  configFLEX.yaml  data.csv  main.py  pyproject.toml  Ошибка в 2026-7.csv
data/: 2022-07-05_BCD225_NKKi67_2028-1-Batch_Analysis_21072022155328.csv  config.yaml
fctool/: __main__.py  console_ui.py  main.py
tests/: dsFACS.py  dsFLEX.py  test_input.py
