[tool.poetry]
name = "fctool"
version = "0.1.0"
description = ""
authors = ["makeevaa <makeevaa@biocad.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
openpyxl = "^3.0.10"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"

И[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fctool = "fctool.console_ui:run"